--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -61,6 +61,7 @@
         </RelativeLayout>
 
         <EditText
+            android:id="@+id/et1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
@@ -101,6 +102,7 @@
         </RelativeLayout>
 
         <EditText
+            android:id="@+id/et2"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
