--- a/app/src/main/res/layout/activity_posting_position.xml
+++ b/app/src/main/res/layout/activity_posting_position.xml
@@ -42,16 +42,20 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <EditText
+                    android:id="@+id/et01"
+                    android:singleLine="true"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="请填写"
-                    android:textColor="#D0021B"
+                    android:background="@null"
+                    android:hint="请填写"
+                    android:textColor="#151515"
                     android:textSize="12sp" />
 
 
                 <ImageView
+                    android:visibility="invisible"
                     android:layout_width="6.2dp"
                     android:layout_height="11.7dp"
                     android:layout_gravity="center"
@@ -60,6 +64,20 @@
                     android:src="@mipmap/zx_44" />
 
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="20dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/white" />
+
+
+            </LinearLayout>
+
 
             <LinearLayout
                 android:id="@+id/layout02"
@@ -83,11 +101,12 @@
                     android:layout_weight="1" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tv02"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="请选择"
-                    android:textColor="#D0021B"
+                    android:textColor="#151515"
                     android:textSize="12sp" />
 
 
@@ -124,11 +143,12 @@
                     android:layout_weight="1" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tv03"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="请填写"
-                    android:textColor="#D0021B"
+                    android:text="请选择"
+                    android:textColor="#151515"
                     android:textSize="12sp" />
 
 
@@ -139,6 +159,19 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="20dp"
                     android:src="@mipmap/zx_44" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="20dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/white" />
+
 
             </LinearLayout>
 
@@ -164,11 +197,12 @@
                     android:layout_weight="1" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tv04"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="请填写"
-                    android:textColor="#D0021B"
+                    android:text="请选择"
+                    android:textColor="#151515"
                     android:textSize="12sp" />
 
 
@@ -205,11 +239,12 @@
                     android:layout_weight="1" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tv05"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="请选择"
-                    android:textColor="#D0021B"
+                    android:textColor="#151515"
                     android:textSize="12sp" />
 
 
@@ -220,6 +255,19 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="20dp"
                     android:src="@mipmap/zx_44" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="20dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/white" />
+
 
             </LinearLayout>
 
@@ -238,22 +286,22 @@
                     android:text="户口要求"
                     android:textColor="#333333"
                     android:textSize="14sp" />
-
                 <View
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
-
-                <TextView
-                    android:layout_width="wrap_content"
+                <EditText
+                    android:background="@null"
+                    android:id="@+id/et06"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="请填写"
-                    android:textColor="#D0021B"
+                    android:hint="请填写"
+                    android:textColor="#151515"
                     android:textSize="12sp" />
 
-
                 <ImageView
+                    android:visibility="invisible"
                     android:layout_width="6.2dp"
                     android:layout_height="11.7dp"
                     android:layout_gravity="center"
@@ -286,11 +334,12 @@
                     android:layout_weight="1" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tv07"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="请填写"
-                    android:textColor="#D0021B"
+                    android:text="请选择"
+                    android:textColor="#151515"
                     android:textSize="12sp" />
 
 
@@ -301,6 +350,19 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="20dp"
                     android:src="@mipmap/zx_44" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="20dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/white" />
+
 
             </LinearLayout>
 
@@ -326,11 +388,12 @@
                     android:layout_weight="1" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tv08"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="请填写"
-                    android:textColor="#D0021B"
+                    android:text="请选择"
+                    android:textColor="#151515"
                     android:textSize="12sp" />
 
 
@@ -341,6 +404,19 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="20dp"
                     android:src="@mipmap/zx_44" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="20dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/white" />
+
 
             </LinearLayout>
 
@@ -364,13 +440,13 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
-
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tv09"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="请填写"
-                    android:textColor="#D0021B"
+                    android:text="请选择"
+                    android:textColor="#151515"
                     android:textSize="12sp" />
 
 
@@ -407,11 +483,12 @@
                     android:layout_weight="1" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tv10"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="请填写"
-                    android:textColor="#D0021B"
+                    android:text="请选择"
+                    android:textColor="#151515"
                     android:textSize="12sp" />
 
 
@@ -422,6 +499,19 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="20dp"
                     android:src="@mipmap/zx_44" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="20dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/white" />
+
 
             </LinearLayout>
 
@@ -446,22 +536,39 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <EditText
+                    android:singleLine="true"
+                    android:background="@null"
+                    android:id="@+id/et11"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="请填写"
-                    android:textColor="#D0021B"
+                    android:hint="请填写"
+                    android:textColor="#151515"
                     android:textSize="12sp" />
 
 
                 <ImageView
+                    android:visibility="invisible"
                     android:layout_width="6.2dp"
                     android:layout_height="11.7dp"
                     android:layout_gravity="center"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="20dp"
                     android:src="@mipmap/zx_44" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="20dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/white" />
+
 
             </LinearLayout>
 
@@ -488,11 +595,12 @@
                     android:layout_weight="1" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tv12"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="请填写"
-                    android:textColor="#D0021B"
+                    android:text="请选择"
+                    android:textColor="#151515"
                     android:textSize="12sp" />
 
 
@@ -509,7 +617,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="9dp"
                 android:layout_marginLeft="20dp"
+                android:layout_marginTop="8dp"
                 android:text="年龄要求填写例：23岁以上"
                 android:textColor="#FF999999"
                 android:textSize="11sp" />
@@ -536,11 +646,12 @@
                     android:layout_weight="1" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tv13"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="请填写"
-                    android:textColor="#D0021B"
+                    android:text="请选择"
+                    android:textColor="#151515"
                     android:textSize="12sp" />
 
 
@@ -551,6 +662,19 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="20dp"
                     android:src="@mipmap/zx_44" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="20dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/white" />
+
 
             </LinearLayout>
 
@@ -575,16 +699,21 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <EditText
+                    android:inputType="number"
+                    android:background="@null"
+                    android:maxLength="5"
+                    android:singleLine="true"
+                    android:id="@+id/et14"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="请填写"
-                    android:textColor="#D0021B"
+                    android:hint="请填写"
+                    android:textColor="#151515"
                     android:textSize="12sp" />
 
-
                 <ImageView
+                    android:visibility="invisible"
                     android:layout_width="6.2dp"
                     android:layout_height="11.7dp"
                     android:layout_gravity="center"
@@ -597,21 +726,23 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="9dp"
                 android:layout_marginLeft="20dp"
+                android:layout_marginTop="8dp"
                 android:text="招聘人数不填表示若干"
                 android:textColor="#FF999999"
                 android:textSize="11sp" />
 
             <LinearLayout
-                android:layout_marginBottom="20dp"
+                android:minHeight="50dp"
                 android:id="@+id/layout15"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
                 android:background="@drawable/bg_white"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -625,16 +756,19 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <EditText
+                    android:background="@null"
+                    android:id="@+id/et16"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="请填写"
-                    android:textColor="#D0021B"
+                    android:hint="请填写"
+                    android:textColor="#151515"
                     android:textSize="12sp" />
 
 
                 <ImageView
+                    android:visibility="invisible"
                     android:layout_width="6.2dp"
                     android:layout_height="11.7dp"
                     android:layout_gravity="center"
@@ -643,7 +777,20 @@
                     android:src="@mipmap/zx_44" />
 
             </LinearLayout>
+            <Button
+                android:id="@+id/bt17"
+                android:layout_width="329dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="31dp"
+                android:layout_marginBottom="17dp"
+                android:background="@drawable/bt_bg_red_clickable"
+                android:gravity="center"
+                android:text="发布"
+                android:textColor="@color/color_white"
+                android:textSize="16sp" />
         </LinearLayout>
+
 
     </android.support.v4.widget.NestedScrollView>
 
