--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -104,13 +104,11 @@
             android:background="@color/bg_color" />
 
         <TextView
+            android:id="@+id/tvInfo"
             android:layout_width="333.8dp"
             android:layout_height="261dp"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:text="     杭州晖鸿科技有限公司隶属于杭州鸿鹄电子有限公司，是公司专业从事软件技术开发、信息化建设的高新技术团队。公司研发团队坐落于中国杭州核心互联网区域未来科技城内，拥有行业内最顶尖的人才和软硬件基础，同时秉承着鸿鹄电子优良的企业传统，融合时下最新的互联网技术和概念，为各行各业的客户提供优质、高科技含量的产品和技术支持，满足不同客户在信息化时代的发展需要。
-     公司由80、90后中青年组成，涵盖JAVA、PHP、.NET、HTML5、Android、IOS、微信等市面主流技术和研发能力。由10年以上开发经验工程师带队，结合各大高校优质毕业生，结合打造一支年轻又富有潜力，全面又不失专精的高质量技术团队。
-"
             android:textColor="#FF999999"
             android:textSize="14sp" />
 
