--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
@@ -45,14 +46,22 @@
             android:layout_marginTop="16dp"
             android:orientation="horizontal">
 
-            <ImageView
-                android:layout_width="72dp"
-                android:layout_height="72dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:src="@drawable/ic_launcher" />
+            <com.joooonho.SelectableRoundedImageView
+                android:id="@+id/ivHead"
+                android:layout_width="71dp"
+                android:layout_height="71dp"
+                android:layout_marginLeft="21dp"
+                android:scaleType="centerCrop"
+                app:sriv_left_top_corner_radius="35.5dp"
+                app:sriv_right_top_corner_radius="35.5dp"
+                app:sriv_left_bottom_corner_radius="35.5dp"
+                app:sriv_right_bottom_corner_radius="35.5dp"
+                app:sriv_border_width="4dp"
+                app:sriv_border_color="#EE6723"
+                app:sriv_oval="true" />
 
             <LinearLayout
+                android:layout_marginLeft="18dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
@@ -60,6 +69,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/title"
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
                     android:text="杭州晖鸿科技有限公司"
@@ -71,23 +81,39 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-
                     <TextView
-                        android:layout_width="46dp"
-                        android:layout_height="20dp"
+                        android:id="@+id/cname"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:text="dayday"
                         android:textColor="#FFFFFFFF"
                         android:textSize="14sp" />
-
+                    <ImageView
+                        android:id="@+id/ivLevel"
+                        android:layout_marginLeft="8dp"
+                        android:src="@mipmap/zx_65"
+                        android:layout_width="12dp"
+                        android:layout_height="20dp" />
                     <TextView
-                        android:layout_width="44dp"
-                        android:layout_height="16dp"
+                        android:id="@+id/tvhycz"
+                        android:layout_marginLeft="7.3dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:text="会员充值"
                         android:textColor="#FFF5A623"
                         android:textSize="11sp" />
+                    
+                    <ImageView
+                        android:layout_marginLeft="6dp"
+                        android:layout_gravity="center"
+                        android:src="@mipmap/zx_111"
+                        android:layout_width="6dp"
+                        android:layout_height="11dp" />
+                    
                 </LinearLayout>
 
                 <TextView
+                    android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
                     android:text="356335205@qq.com"
@@ -114,11 +140,11 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/resumeLeft"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
                 android:layout_marginTop="10dp"
-                android:text="0"
                 android:textColor="#FF333333"
                 android:textSize="20sp" />
 
@@ -143,11 +169,11 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/vipTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
                 android:layout_marginTop="10dp"
-                android:text="0"
                 android:textColor="#FF333333"
                 android:textSize="20sp" />
 
@@ -171,14 +197,37 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <TextView
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
                 android:layout_marginTop="10dp"
-                android:text="0"
-                android:textColor="#FF333333"
-                android:textSize="20sp" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/msgSend"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#FF333333"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="+"
+                    android:textColor="#FF333333"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/msgReceive"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#FF333333"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
 
             <TextView
                 android:layout_width="wrap_content"
@@ -213,11 +262,11 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/receiveResume"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
                 android:layout_marginTop="10dp"
-                android:text="0"
                 android:textColor="#FF333333"
                 android:textSize="20sp" />
 
@@ -242,11 +291,11 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/viewResume"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
                 android:layout_marginTop="10dp"
-                android:text="0"
                 android:textColor="#FF333333"
                 android:textSize="20sp" />
 
@@ -271,11 +320,11 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/favs"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
                 android:layout_marginTop="10dp"
-                android:text="0"
                 android:textColor="#FF333333"
                 android:textSize="20sp" />
 
