--- a/app/src/main/res/layout/activity_company_profile.xml
+++ b/app/src/main/res/layout/activity_company_profile.xml
@@ -9,24 +9,23 @@
 
 
     <EditText
+        android:id="@+id/et01"
         android:layout_width="329dp"
         android:layout_height="329dp"
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
-        android:background="@color/color_white"
+        android:background="@drawable/et_edit_text"
         android:gravity="top"
-        android:padding="5dp" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:padding="5dp"
+        android:textColor="#FF151515"
+        android:textSize="14sp" />
 
     <Button
+        android:id="@+id/bt01"
         android:layout_width="329dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="102dp"
         android:background="@drawable/bt_bg_red_clickable"
         android:text="提交"
         android:textColor="@color/color_white" />
