--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,13 +38,12 @@
 
 
     <LinearLayout
-
         android:layout_width="329dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="41dp"
         android:background="@drawable/bg_04"
         android:orientation="horizontal">
 
@@ -72,11 +71,13 @@
             android:textSize="13sp" />
 
         <ImageView
+            android:id="@+id/iv01"
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center"
             android:layout_marginRight="5dp"
-            android:src="@mipmap/zx_87" />
+            android:src="@mipmap/zx_87"
+            android:visibility="invisible" />
     </LinearLayout>
 
     <LinearLayout
@@ -85,7 +86,7 @@
         android:layout_gravity="center"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/bg_04"
         android:orientation="horizontal">
 
@@ -102,6 +103,7 @@
         </RelativeLayout>
 
         <EditText
+            android:inputType="textPassword"
             android:id="@+id/et2"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -113,6 +115,7 @@
             android:textSize="13sp" />
 
         <ImageView
+            android:id="@+id/iv02"
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center"
@@ -126,7 +129,7 @@
         android:layout_gravity="center"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/bg_04"
         android:orientation="horizontal">
 
@@ -143,6 +146,7 @@
         </RelativeLayout>
 
         <EditText
+            android:id="@+id/et3"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
@@ -150,17 +154,22 @@
             android:layout_weight="1"
             android:background="@null"
             android:hint="请输验证码"
+            android:inputType="number"
+            android:maxLength="10"
             android:textSize="13sp" />
 
         <TextView
-            android:layout_width="87dp"
-            android:layout_height="23.3dp"
+            android:id="@+id/tv03"
+            android:paddingRight="16dp"
+            android:paddingLeft="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
             android:layout_gravity="center"
             android:layout_marginRight="5dp"
-            android:background="@drawable/bg_02"
+            android:background="@drawable/bg_get_code_01"
             android:gravity="center"
             android:text="获取验证码"
-            android:textColor="#D0021B"
+            android:textColor="@color/get_code_text_01"
             android:textSize="11sp" />
     </LinearLayout>
 
@@ -169,7 +178,7 @@
         android:layout_width="329dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="33dp"
         android:background="@drawable/bt_bg_red_clickable"
         android:gravity="center"
         android:text="登录"
@@ -180,7 +189,7 @@
         android:layout_width="329dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="11dp"
         android:gravity="center"
         android:orientation="horizontal">
 
