--- a/app/src/main/res/layout/activity_personal_information.xml
+++ b/app/src/main/res/layout/activity_personal_information.xml
@@ -22,14 +22,17 @@
             android:layout_marginLeft="22dp"
             android:src="@mipmap/zx_76" />
 
-        <TextView
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/et01"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             android:layout_marginLeft="10.2dp"
+            android:layout_marginRight="10dp"
             android:layout_marginTop="12dp"
-            android:text="公司名称"
-            android:textColor="#FF999999"
+            android:background="@null"
+            android:hint="公司名称"
+            android:textColor="@color/black"
             android:textSize="13sp" />
     </LinearLayout>
 
@@ -70,15 +73,19 @@
             android:layout_marginLeft="22dp"
             android:src="@mipmap/zx_77" />
 
-        <TextView
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/et02"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             android:layout_marginLeft="10.2dp"
+            android:layout_marginRight="10dp"
             android:layout_marginTop="12dp"
-            android:text="招聘负责人"
-            android:textColor="#FF999999"
+            android:background="@null"
+            android:hint="招聘负责人"
+            android:textColor="@color/black"
             android:textSize="13sp" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -118,14 +125,17 @@
             android:layout_marginLeft="22dp"
             android:src="@mipmap/zx_78" />
 
-        <TextView
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/et03"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             android:layout_marginLeft="10.2dp"
+            android:layout_marginRight="10dp"
             android:layout_marginTop="12dp"
-            android:text="联系电话"
-            android:textColor="#FF999999"
+            android:background="@null"
+            android:hint="联系电话"
+            android:textColor="@color/black"
             android:textSize="13sp" />
     </LinearLayout>
 
@@ -181,6 +191,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/layout02"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -195,14 +206,23 @@
             android:src="@mipmap/zx_80" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/tv05"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             android:layout_marginLeft="10.2dp"
+            android:layout_marginRight="10dp"
             android:layout_marginTop="12dp"
+            android:layout_weight="1"
             android:text="所属行业"
-            android:textColor="#FF999999"
             android:textSize="13sp" />
+
+        <ImageView
+            android:layout_width="7.2dp"
+            android:layout_height="16.7dp"
+            android:layout_marginRight="13.8dp"
+            android:src="@mipmap/zx_44" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -229,6 +249,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/layout03"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -243,17 +264,27 @@
             android:src="@mipmap/zx_75" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/tv06"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             android:layout_marginLeft="10.2dp"
+            android:layout_marginRight="10dp"
             android:layout_marginTop="12dp"
+            android:layout_weight="1"
             android:text="公司性质"
-            android:textColor="#FF999999"
             android:textSize="13sp" />
+
+        <ImageView
+            android:layout_width="7.2dp"
+            android:layout_height="16.7dp"
+            android:layout_marginRight="13.8dp"
+            android:src="@mipmap/zx_44" />
+
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/layout04"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -269,15 +300,25 @@
             android:src="@mipmap/zx_74" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:singleLine="true"
+            android:id="@+id/tv07"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             android:layout_marginLeft="10.2dp"
+            android:layout_marginRight="10dp"
             android:layout_marginTop="12dp"
+            android:layout_weight="1"
             android:text="公司简介"
-            android:textColor="#FF999999"
             android:textSize="13sp" />
+
+        <ImageView
+            android:layout_width="7.2dp"
+            android:layout_height="16.7dp"
+            android:layout_marginRight="13.8dp"
+            android:src="@mipmap/zx_44" />
     </LinearLayout>
+
     <Button
         android:id="@+id/btSure"
         android:layout_width="329dp"
