--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -38,7 +38,6 @@
 
 
     <LinearLayout
-
         android:layout_width="329dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
@@ -61,6 +60,7 @@
         </RelativeLayout>
 
         <EditText
+            android:id="@+id/et01"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
@@ -71,6 +71,8 @@
             android:textSize="13sp" />
 
         <ImageView
+            android:visibility="invisible"
+            android:id="@+id/iv01"
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center"
@@ -85,7 +87,7 @@
         android:layout_gravity="center"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/bg_04"
         android:orientation="horizontal">
 
@@ -102,6 +104,8 @@
         </RelativeLayout>
 
         <EditText
+            android:inputType="phone"
+            android:id="@+id/et02"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
@@ -112,6 +116,8 @@
             android:textSize="13sp" />
 
         <ImageView
+            android:visibility="invisible"
+            android:id="@+id/iv02"
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center"
@@ -126,7 +132,7 @@
         android:layout_gravity="center"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/bg_04"
         android:orientation="horizontal">
 
@@ -143,6 +149,7 @@
         </RelativeLayout>
 
         <EditText
+            android:id="@+id/et03"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
@@ -153,14 +160,17 @@
             android:textSize="13sp" />
 
         <TextView
-            android:layout_width="87dp"
-            android:layout_height="23.3dp"
+            android:id="@+id/tv03"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
             android:layout_gravity="center"
             android:layout_marginRight="5dp"
-            android:background="@drawable/bg_02"
+            android:background="@drawable/bg_get_code_01"
             android:gravity="center"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:text="获取验证码"
-            android:textColor="#D0021B"
+            android:textColor="@color/get_code_text_01"
             android:textSize="11sp" />
     </LinearLayout>
 
@@ -170,7 +180,7 @@
         android:layout_gravity="center"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/bg_04"
         android:orientation="horizontal">
 
@@ -187,6 +197,8 @@
         </RelativeLayout>
 
         <EditText
+            android:inputType="textPassword"
+            android:id="@+id/et04"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
@@ -197,6 +209,7 @@
             android:textSize="13sp" />
 
         <ImageView
+            android:id="@+id/iv04"
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center"
@@ -210,7 +223,7 @@
         android:layout_gravity="center"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/bg_04"
         android:orientation="horizontal">
 
@@ -227,6 +240,8 @@
         </RelativeLayout>
 
         <EditText
+            android:inputType="textPassword"
+            android:id="@+id/et05"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
@@ -237,6 +252,7 @@
             android:textSize="13sp" />
 
         <ImageView
+            android:id="@+id/iv05"
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center"
@@ -244,12 +260,55 @@
             android:src="@mipmap/zx_12" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="329dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/bg_04"
+        android:orientation="horizontal">
+
+        <RelativeLayout
+            android:layout_width="45dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/bg_03">
+
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="17dp"
+                android:layout_centerInParent="true"
+                android:src="@mipmap/zx_85" />
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/tv06"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:background="@null"
+            android:gravity="center_vertical"
+            android:hint="请选择城市"
+            android:textSize="13sp" />
+
+        <ImageView
+            android:layout_width="17dp"
+            android:layout_height="17dp"
+            android:layout_gravity="center"
+            android:layout_marginRight="5dp"
+            android:src="@mipmap/zx_39" />
+    </LinearLayout>
+
     <Button
         android:id="@+id/btSure"
         android:layout_width="329dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="33dp"
         android:background="@drawable/bt_bg_red_clickable"
         android:gravity="center"
         android:text="下一步"
@@ -260,11 +319,10 @@
         android:layout_width="329dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="11dp"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="注册即表示同意"
@@ -272,7 +330,7 @@
             android:textSize="12sp" />
 
         <TextView
-            android:id="@+id/tv2"
+            android:id="@+id/tv07"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="《用户协议》"
