--- a/app/src/main/res/layout/activity_settings_account_information.xml
+++ b/app/src/main/res/layout/activity_settings_account_information.xml
@@ -26,11 +26,11 @@
             android:layout_weight="1" />
 
         <TextView
+            android:id="@+id/tv01"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginRight="10dp"
-            android:text="dayday"
             android:textColor="#FF333333"
             android:textSize="17sp" />
 
@@ -55,11 +55,11 @@
             android:layout_weight="1" />
 
         <TextView
+            android:id="@+id/tv02"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginRight="5dp"
-            android:text="18842682580"
             android:textColor="#FF333333"
             android:textSize="17sp" />
 
@@ -91,11 +91,11 @@
             android:layout_weight="1" />
 
         <TextView
+            android:id="@+id/tv03"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginRight="5dp"
-            android:text="356335205@qq.com"
             android:textColor="#FF333333"
             android:textSize="17sp" />
 
