--- a/app/src/main/res/layout/activity_settings_essential_information.xml
+++ b/app/src/main/res/layout/activity_settings_essential_information.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_white"
+    android:background="@color/bg_color"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:orientation="vertical">
 
     <include layout="@layout/top_bar_style" />
@@ -17,19 +20,23 @@
             android:orientation="vertical">
 
 
-            <ImageView
+            <com.joooonho.SelectableRoundedImageView
+                android:id="@+id/ivHead"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
                 android:layout_gravity="center"
-                android:layout_marginBottom="30dp"
                 android:layout_marginTop="28dp"
-                android:src="@mipmap/ic_launcher" />
+                android:scaleType="centerCrop"
+                app:sriv_left_bottom_corner_radius="10dp"
+                app:sriv_left_top_corner_radius="10dp"
+                app:sriv_right_bottom_corner_radius="10dp"
+                app:sriv_right_top_corner_radius="10dp" />
 
             <LinearLayout
                 android:layout_width="331dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="40dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -45,9 +52,9 @@
                     android:layout_weight="1" />
 
                 <TextView
-                    android:layout_width="140dp"
-                    android:layout_height="17dp"
-                    android:text="杭州晖鸿科技有限公司"
+                    android:id="@+id/tvName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:textColor="#FF666666"
                     android:textSize="14sp" />
             </LinearLayout>
@@ -57,201 +64,241 @@
                 android:layout_width="331dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="20dp"
                 android:text="招聘负责人"
                 android:textColor="#FF666666"
                 android:textSize="14sp" />
 
 
             <EditText
+                android:id="@+id/et01"
                 android:layout_width="331dp"
                 android:layout_height="38dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="12dp"
-                android:background="@drawable/bg_11"
+                android:background="@mipmap/zx_112"
                 android:gravity="left|center_vertical"
+                android:hint="请填写招聘负责人"
                 android:paddingLeft="20dp"
                 android:paddingRight="10dp"
-                android:text="请填写新密码"
-                android:textColor="#FF999999"
+                android:textColor="#FF333333"
                 android:textSize="13sp" />
 
             <TextView
                 android:layout_width="331dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="15dp"
                 android:text="法人代表（选填）"
                 android:textColor="#FF666666"
                 android:textSize="14sp" />
 
 
             <EditText
+                android:id="@+id/et02"
                 android:layout_width="331dp"
                 android:layout_height="38dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="12dp"
-                android:background="@drawable/bg_11"
+                android:background="@mipmap/zx_112"
                 android:gravity="left|center_vertical"
+                android:hint="请填写法人代表"
                 android:paddingLeft="20dp"
                 android:paddingRight="10dp"
-                android:text="请填写新密码"
-                android:textColor="#FF999999"
+                android:textColor="#FF333333"
                 android:textSize="13sp" />
 
             <TextView
                 android:layout_width="331dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="15dp"
                 android:text="联系电话"
                 android:textColor="#FF666666"
                 android:textSize="14sp" />
 
 
             <EditText
+                android:id="@+id/et03"
                 android:layout_width="331dp"
                 android:layout_height="38dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="12dp"
-                android:background="@drawable/bg_11"
+                android:background="@mipmap/zx_112"
                 android:gravity="left|center_vertical"
+                android:hint="请填写联系电话"
                 android:paddingLeft="20dp"
                 android:paddingRight="10dp"
-                android:text="请填写新密码"
-                android:textColor="#FF999999"
+                android:textColor="#FF333333"
                 android:textSize="13sp" />
 
             <TextView
                 android:layout_width="331dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="12dp"
-                android:text="联系电话"
+                android:layout_marginTop="15dp"
+                android:text="传真号码（选填）"
                 android:textColor="#FF666666"
                 android:textSize="14sp" />
 
 
             <EditText
+                android:id="@+id/et04"
                 android:layout_width="331dp"
                 android:layout_height="38dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="12dp"
-                android:background="@drawable/bg_11"
+                android:background="@mipmap/zx_112"
                 android:gravity="left|center_vertical"
+                android:hint="请填写传真号码"
                 android:paddingLeft="20dp"
                 android:paddingRight="10dp"
-                android:text="请填写新密码"
-                android:textColor="#FF999999"
+                android:textColor="#FF333333"
                 android:textSize="13sp" />
 
             <TextView
                 android:layout_width="331dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="12dp"
-                android:text="联系电话"
+                android:layout_marginTop="15dp"
+                android:text="公司地址"
                 android:textColor="#FF666666"
                 android:textSize="14sp" />
 
 
             <EditText
+                android:id="@+id/et05"
                 android:layout_width="331dp"
                 android:layout_height="38dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="12dp"
-                android:background="@drawable/bg_11"
+                android:background="@mipmap/zx_112"
                 android:gravity="left|center_vertical"
+                android:hint="请填写公司地址"
                 android:paddingLeft="20dp"
                 android:paddingRight="10dp"
-                android:text="请填写新密码"
-                android:textColor="#FF999999"
+                android:textColor="#FF333333"
                 android:textSize="13sp" />
 
             <TextView
                 android:layout_width="331dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="12dp"
-                android:text="联系电话"
+                android:layout_marginTop="15dp"
+                android:text="公司网站（选填）"
                 android:textColor="#FF666666"
                 android:textSize="14sp" />
 
 
             <EditText
+                android:id="@+id/et06"
                 android:layout_width="331dp"
                 android:layout_height="38dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="12dp"
-                android:background="@drawable/bg_11"
+                android:background="@mipmap/zx_112"
                 android:gravity="left|center_vertical"
+                android:hint="请填写公司网站"
                 android:paddingLeft="20dp"
                 android:paddingRight="10dp"
-                android:text="请填写新密码"
-                android:textColor="#FF999999"
+                android:textColor="#FF333333"
                 android:textSize="13sp" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="331dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:text="所属行业"
+                android:textColor="#FF666666"
+                android:textSize="14sp" />
+
+            <LinearLayout
+                android:id="@+id/layout07"
+                android:layout_width="331dp"
+                android:layout_height="38dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="12dp"
+                android:background="@mipmap/zx_112"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv07"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="18dp"
+                    android:text="请选择所属行业"
+                    android:textColor="#FF333333"
+                    android:textSize="13sp" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+
+                <ImageView
+                    android:layout_width="7.2dp"
+                    android:layout_height="16.7dp"
+                    android:layout_marginRight="14.8dp"
+                    android:src="@mipmap/zx_44" />
+
+            </LinearLayout>
+
 
             <TextView
                 android:layout_width="331dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="12dp"
-                android:text="联系电话"
+                android:layout_marginTop="15dp"
+                android:text="公司性质"
                 android:textColor="#FF666666"
                 android:textSize="14sp" />
 
-
-            <EditText
+            <LinearLayout
+                android:id="@+id/layout08"
                 android:layout_width="331dp"
                 android:layout_height="38dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="12dp"
-                android:background="@drawable/bg_11"
-                android:gravity="left|center_vertical"
-                android:paddingLeft="20dp"
-                android:paddingRight="10dp"
-                android:text="请填写新密码"
-                android:textColor="#FF999999"
-                android:textSize="13sp" />
+                android:background="@mipmap/zx_112"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="331dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="12dp"
-                android:text="联系电话"
-                android:textColor="#FF666666"
-                android:textSize="14sp" />
+                <TextView
+                    android:id="@+id/tv08"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="18dp"
+                    android:text="请选择公司性质"
+                    android:textColor="#FF333333"
+                    android:textSize="13sp" />
 
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
 
-            <EditText
-                android:layout_width="331dp"
-                android:layout_height="38dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="12dp"
-                android:background="@drawable/bg_11"
-                android:gravity="left|center_vertical"
-                android:paddingLeft="20dp"
-                android:paddingRight="10dp"
-                android:text="请填写新密码"
-                android:textColor="#FF999999"
-                android:textSize="13sp" />
+                <ImageView
+                    android:layout_width="7.2dp"
+                    android:layout_height="16.7dp"
+                    android:layout_marginRight="14.8dp"
+                    android:src="@mipmap/zx_44" />
+
+            </LinearLayout>
 
             <Button
+                android:id="@+id/btChange"
                 android:layout_width="329dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
-                android:layout_marginBottom="40dp"
-                android:layout_marginTop="46dp"
+                android:layout_marginBottom="47dp"
+                android:layout_marginTop="47dp"
                 android:background="@drawable/bt_bg_red_clickable"
                 android:text="修改"
                 android:textColor="#FFFFFFFF"
                 android:textSize="16sp" />
-
-
         </LinearLayout>
-
     </ScrollView>
-
-
 </LinearLayout>
