--- a/app/src/main/res/layout/activity_settings_modify_password.xml
+++ b/app/src/main/res/layout/activity_settings_modify_password.xml
@@ -12,21 +12,21 @@
         android:layout_width="331dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="15dp"
         android:orientation="horizontal">
 
         <TextView
-            android:layout_width="56dp"
-            android:layout_height="17dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="用户名："
             android:textColor="#FF666666"
             android:textSize="14sp" />
 
         <TextView
-            android:layout_width="43dp"
-            android:layout_height="16dp"
-            android:layout_marginLeft="10dp"
-            android:text="dayday"
+            android:id="@+id/tv01"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:textColor="#FF333333"
             android:textSize="13sp" />
     </LinearLayout>
@@ -36,22 +36,24 @@
         android:layout_width="331dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="18dp"
         android:text="旧密码"
         android:textColor="#FF666666"
         android:textSize="14sp" />
 
 
     <EditText
+        android:id="@+id/et02"
         android:layout_width="331dp"
         android:layout_height="38dp"
         android:layout_gravity="center"
         android:layout_marginTop="12dp"
-        android:background="@drawable/bg_11"
+        android:background="@mipmap/zx_112"
         android:gravity="left|center_vertical"
+        android:inputType="textPassword"
         android:paddingLeft="20dp"
         android:paddingRight="10dp"
-        android:text="请填写新密码"
+        android:hint="请填写旧密码"
         android:textColor="#FF999999"
         android:textSize="13sp" />
 
@@ -59,22 +61,24 @@
         android:layout_width="331dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="15dp"
         android:text="新密码"
         android:textColor="#FF666666"
         android:textSize="14sp" />
 
 
     <EditText
+        android:id="@+id/et03"
         android:layout_width="331dp"
         android:layout_height="38dp"
         android:layout_gravity="center"
         android:layout_marginTop="12dp"
-        android:background="@drawable/bg_11"
+        android:background="@mipmap/zx_112"
         android:gravity="left|center_vertical"
+        android:inputType="textPassword"
         android:paddingLeft="20dp"
         android:paddingRight="10dp"
-        android:text="请填写新密码"
+        android:hint="请填写新密码"
         android:textColor="#FF999999"
         android:textSize="13sp" />
 
@@ -82,26 +86,29 @@
         android:layout_width="331dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="15dp"
         android:text="确认新密码"
         android:textColor="#FF666666"
         android:textSize="14sp" />
 
 
     <EditText
+        android:id="@+id/et04"
         android:layout_width="331dp"
         android:layout_height="38dp"
         android:layout_gravity="center"
         android:layout_marginTop="12dp"
-        android:background="@drawable/bg_11"
+        android:background="@mipmap/zx_112"
         android:gravity="left|center_vertical"
+        android:inputType="textPassword"
         android:paddingLeft="20dp"
         android:paddingRight="10dp"
-        android:text="请填写新密码"
+        android:hint="请填写确认密码"
         android:textColor="#FF999999"
         android:textSize="13sp" />
 
     <Button
+        android:id="@+id/bt05"
         android:layout_width="329dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
