--- a/zuoni-common/src/main/res/layout/top_style_01.xml
+++ b/zuoni-common/src/main/res/layout/top_style_01.xml
@@ -14,7 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/color_line" />
+        android:background="@color/color_line"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/tvLeft"
@@ -27,20 +28,21 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:text="@string/cancel"
-        android:textColor="@color/black"
+        android:textColor="#999999"
         android:textSize="15sp" />
 
     <TextView
         android:id="@+id/tvRight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/tvLeft"
+        android:layout_alignBottom="@+id/tvLeft"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
         android:layout_gravity="center_vertical"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:text="@string/sure"
-        android:textColor="@color/black"
+        android:textColor="#D0021B"
         android:textSize="15sp" />
 </RelativeLayout>
